# osg-3rdparty-cmake

./: CMakeLists.txt  README.md  appveyor.yml  build-osg-3rdparty-cmake.sh  buildSolution-vs2019.bat  download_dependencies.bat  download_dependencies_current_dir.bat  readme.txt  versions.md
.github/workflows/: build.yml
curl/: CMakeLists.txt
freetype/: CMakeLists.txt
giflib/: CMakeLists.txt  unistd.h.in
glut/: CMakeLists.txt
libjpeg/: CMakeLists.txt
libpng/: CMakeLists.txt
libtiff/: CMakeLists.txt  linux.cmake  tif_config.mingw.h  tiffconf.mingw.h
minizip/: CMakeLists.txt
zlib/: CMakeLists.txt
